@@ -1,5 +1,8 @@
 Changelog for Hitman
 
+x.x
+ - Keep forward reads from pairs that could not be merged
+
 0.4 2014-04-09
  - Changed default values:
     * quality truncation increased to Q13 (5%)
